@@ -17,3 +17,4 @@ copy "starting_factories.txt" "debug\starting_factories.txt"
 copy "leader_traits.txt" "debug\leader_traits.txt"
 copy "merge_nations.txt" "debug\merge_nations.txt"
 copy "configuration.txt" "debug\configuration.txt"
+copy "blocked_tech_schools.txt" "debug\blocked_tech_schools.txt"
